packages/lesswrong/components/lexical/themes/PlaygroundEditorTheme.css
/* ... */
.PlaygroundEditorTheme__tabNode.PlaygroundEditorTheme__textStrikethrough::before {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  top: 0.69em;
  border-top: 0.1em solid currentColor;
}

.PlaygroundEditorTheme__tabNode.PlaygroundEditorTheme__textUnderlineStrikethrough::before,
.PlaygroundEditorTheme__tabNode.PlaygroundEditorTheme__textUnderlineStrikethrough::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
}

.PlaygroundEditorTheme__tabNode.PlaygroundEditorTheme__textUnderlineStrikethrough::before {
  top: 0.69em;
  border-top: 0.1em solid currentColor;
}

.PlaygroundEditorTheme__tabNode.PlaygroundEditorTheme__textUnderlineStrikethrough::after {
  bottom: 0.05em;
  border-bottom: 0.1em solid currentColor;
}

.PlaygroundEditorTheme__textSubscript {
  font-size: 0.8em;
  vertical-align: sub !important;
}
.PlaygroundEditorTheme__textSuperscript {
  font-size: 0.8em;
  vertical-align: super;
}
.PlaygroundEditorTheme__textCode {
  background-color: rgb(240, 242, 245);
  padding: 1px 0.25rem;
  font-family: Menlo, Consolas, Monaco, monospace;
  font-size: 94%;
}
.PlaygroundEditorTheme__textLowercase {
  text-transform: lowercase;
}
.PlaygroundEditorTheme__textUppercase {
  text-transform: uppercase;
}
.PlaygroundEditorTheme__textCapitalize {
  text-transform: capitalize;
}
.PlaygroundEditorTheme__hashtag {
  background-color: rgba(88, 144, 255, 0.15);
  border-bottom: 1px solid rgba(88, 144, 255, 0.3);
}
.PlaygroundEditorTheme__link {
  color: rgb(33, 111, 219);
  text-decoration: none;
}
.PlaygroundEditorTheme__link:hover {
  text-decoration: underline;
  cursor: pointer;
}
.PlaygroundEditorTheme__blockCursor {
  display: block;
  pointer-events: none;
  position: absolute;
}
.PlaygroundEditorTheme__blockCursor:after {
  content: '';
  display: block;
  position: absolute;
  top: -2px;
  width: 20px;
  border-top: 1px solid black;
  animation: CursorBlink 1.1s steps(2, start) infinite;
}
@keyframes CursorBlink {
  to {
    visibility: hidden;
  }
}
.PlaygroundEditorTheme__code {
  background-color: rgb(240, 242, 245);
  font-family: Menlo, Consolas, Monaco, monospace;
  display: block;
  padding: 8px 8px 8px 52px;
  line-height: 1.53;
  font-size: 13px;
  margin: 0;
  margin-top: 8px;
  margin-bottom: 8px;
  overflow-x: auto;
  position: relative;
  tab-size: 2;
}
.PlaygroundEditorTheme__code:before {
  content: attr(data-gutter);
  position: absolute;
  background-color: #eee;
  left: 0;
  top: 0;
  border-right: 1px solid #ccc;
  padding: 8px;
  color: #777;
  white-space: pre-wrap;
  text-align: right;
  min-width: 25px;
}
.PlaygroundEditorTheme__tableScrollableWrapper {
  overflow-x: auto;
  margin: 0px 25px 30px 0px;
}
.PlaygroundEditorTheme__tableScrollRight {
  box-shadow: inset -10px 0 10px rgba(0, 0, 0, 0.15);
}
.PlaygroundEditorTheme__tableScrollLeft {
  box-shadow: inset 10px 0 10px rgba(0, 0, 0, 0.15);
}
.PlaygroundEditorTheme__tableScrollMiddle {
  box-shadow:
    inset 10px 0 10px rgba(0, 0, 0, 0.15),
    inset -10px 0 10px rgba(0, 0, 0, 0.15);
}
.PlaygroundEditorTheme__tableScrollableWrapper > .PlaygroundEditorTheme__table {
  /* Remove the table's vertical margin and put it on the wrapper */
  margin-top: 0;
  margin-bottom: 0;
}
.PlaygroundEditorTheme__tableAlignmentCenter {
  margin-left: auto;
  margin-right: auto;
}
.PlaygroundEditorTheme__tableAlignmentRight {
  margin-left: auto;
}
.PlaygroundEditorTheme__table {
  border-collapse: collapse;
  border-spacing: 0;
  overflow-y: scroll;
  overflow-x: scroll;
  table-layout: fixed;
  width: fit-content;
  margin-top: 25px;
  margin-bottom: 30px;
}
.PlaygroundEditorTheme__tableScrollableWrapper.PlaygroundEditorTheme__tableFrozenRow {
  /* position:sticky needs overflow:clip or visible
     https://github.com/w3c/csswg-drafts/issues/865#issuecomment-350585274 */
  overflow-x: clip;
}
.PlaygroundEditorTheme__tableFrozenRow tr:nth-of-type(1) > td {
  overflow: clip;
  background-color: #ffffff;
  position: sticky;
  z-index: 2;
  top: 44px;
}
.PlaygroundEditorTheme__tableFrozenRow tr:nth-of-type(1) > th {
  overflow: clip;
  background-color: #f2f3f5;
  position: sticky;
  z-index: 2;
  top: 44px;
}
.PlaygroundEditorTheme__tableFrozenRow tr:nth-of-type(1) > th:after,
.PlaygroundEditorTheme__tableFrozenRow tr:nth-of-type(1) > td:after {
  content: '';
  position: absolute;
  left: 0;
  bottom: 0;
  width: 100%;
  border-bottom: 1px solid #bbb;
}
.PlaygroundEditorTheme__tableFrozenColumn tr > td:first-child {
  background-color: #ffffff;
  position: sticky;
  z-index: 2;
  left: 0;
}
.PlaygroundEditorTheme__tableFrozenColumn tr > th:first-child {
  background-color: #f2f3f5;
  position: sticky;
  z-index: 2;
  left: 0;
}
.PlaygroundEditorTheme__tableFrozenColumn tr > :first-child::after {
  content: '';
  position: absolute;
  left: 0;
  top: 0;
  right: 0;
  height: 100%;
  border-right: 1px solid #bbb;
}
.PlaygroundEditorTheme__tableRowStriping tr:nth-child(even),
.PlaygroundEditorTheme__tableFrozenColumn
  .PlaygroundEditorTheme__table.PlaygroundEditorTheme__tableRowStriping
  tr:nth-child(even)
  > td:first-child {
  background-color: #f2f5fb;
}
.PlaygroundEditorTheme__tableSelection *::selection {
  background-color: transparent;
}
.PlaygroundEditorTheme__tableSelected {
  outline: 2px solid rgb(60, 132, 244);
}
.PlaygroundEditorTheme__tableCell {
  border: 1px solid #bbb;
  width: 75px;
  vertical-align: top;
  text-align: start;
  padding: 6px 8px;
  position: relative;
  outline: none;
  overflow: auto;
}
/*
  A firefox workaround to allow scrolling of overflowing table cell
  ref: https://bugzilla.mozilla.org/show_bug.cgi?id=1904159
*/
.PlaygroundEditorTheme__tableCell > * {
  overflow: inherit;
}
.PlaygroundEditorTheme__tableCellResizer {
  position: absolute;
  right: -4px;
  height: 100%;
  width: 8px;
  cursor: ew-resize;
  z-index: 10;
  top: 0;
}
.PlaygroundEditorTheme__tableCellHeader {
  background-color: #f2f3f5;
  text-align: start;
}
/* ... */

